add grid search for finding optimal channel combination

--- a/[Prototype] EFRI Data Analysis LDA.ipynb
+++ b/[Prototype] EFRI Data Analysis LDA.ipynb
@@ -35,6 +35,8 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from scipy.stats import ttest_1samp, ttest_ind\n",
     "\n",
+    "from GridSearch import GridSearch\n",
+    "\n",
     "# from LDA import LDA\n",
     "# from PlotLDAMetrics import PlotLDAMetrics"
    ]
@@ -541,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 35,
    "id": "ce65b555",
    "metadata": {},
    "outputs": [],
@@ -597,6 +599,12 @@
     "    @property\n",
     "    def elec_names(self):\n",
     "        return self.__elec_names\n",
+    "    \n",
+    "    @property\n",
+    "    def optimal_time_windows_per_channel(self):\n",
+    "        if self.__optimal_time_windows_per_channel == None:\n",
+    "            raise Exception('No optimal time windows have been computed yet')\n",
+    "        return self.__optimal_time_windows_per_channel\n",
     "\n",
     "    def _create_time_windows(self):\n",
     "        \"\"\"Create all possible time windows from which X data can be created.\"\"\"\n",
@@ -778,18 +786,18 @@
     "        \n",
     "        return t_stat_sums\n",
     "\n",
-    "    def train_on_optimal_time_windows(self, data, y, n_processes, n_channels=self.__num_channels):\n",
+    "    def train_on_optimal_time_windows(self, data, y, n_processes, n_channels=10):\n",
     "        \"\"\"Train LDA model on the optimal time windows for each channel\"\"\"\n",
     "        self._set_attributes(data)\n",
     "        results = self._multiprocessing_time_window_grid_search(data, y, n_processes)\n",
     "\n",
     "        # Unravel the results from the multiprocessing and sort them by channels\n",
-    "        optimal_time_windows = [item for sublist in results for item in sublist]\n",
-    "        optimal_time_windows.sort(key=lambda x: x[2])\n",
+    "        optimal_time_windows_per_channel = [item for sublist in results for item in sublist]\n",
+    "        optimal_time_windows_per_channel.sort(key=lambda x: x[0])\n",
+    "        optimal_time_windows_per_channel.sort(key=lambda x: x[2], reverse=True)\n",
+    "        self.__optimal_time_windows_per_channel = optimal_time_windows_per_channel\n",
     "\n",
-    "        # return optimal_time_windows\n",
-    "\n",
-    "        for channel, times, _ in optimal_time_windows[::-1][:n_channels]:\n",
+    "        for channel, times, _ in optimal_time_windows_per_channel[:n_channels]:\n",
     "            X = self._create_X(data, channel, times)\n",
     "            self._train(X,y)\n",
     "        \n",
@@ -839,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "2e9a2129",
    "metadata": {},
    "outputs": [],
@@ -920,7 +928,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
+   "id": "7a09491d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "import numpy as np\n",
+    "from LDA import LDA\n",
+    "\n",
+    "def _find_combinations(n, k):\n",
+    "    # Find all the different combinations of k channels\n",
+    "    population = list(range(0, n))\n",
+    "    combinations_list = list(combinations(population, k))\n",
+    "    return combinations_list\n",
+    "\n",
+    "def _get_collective_predictions(predictions):\n",
+    "    # Get the collective prediction for each trial\n",
+    "    collective_predictions = []\n",
+    "\n",
+    "    for trial_predictions in predictions:\n",
+    "        if trial_predictions.mean() >= 0.5:\n",
+    "            collective_predictions.append(1)\n",
+    "        else:\n",
+    "            collective_predictions.append(0)\n",
+    "    \n",
+    "    return collective_predictions\n",
+    "\n",
+    "def _get_collective_prediction_accuracy(collective_predictions, y):\n",
+    "    # Get the accuracy of theveloped a circuit model of decision-making which accounts for the specificity of inputs to and outputs from inhibitory neurons. We found that selective inhibition expands the space of circuits supporting decision-making, allowing for weaker or stronger recurrent excitation when connected in a competitive or feedback motif. The specificity of inhibitory outputs sets te collective prediction\n",
+    "    accuracy = (y == collective_predictions).mean()\n",
+    "    return accuracy\n",
+    "\n",
+    "\n",
+    "class GridSearch(object):\n",
+    "    \"\"\"Class for performing grid search on the optimal channel combination to use for collective prediction\n",
+    "    \n",
+    "    LDA must be trained using the method train_on_optimal_time_windows() before using this class\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, lda:LDA):\n",
+    "        self.__lda = lda\n",
+    "\n",
+    "    def _get_predictions(self):\n",
+    "        predictions = []\n",
+    "\n",
+    "        # Get predictions for each trial by each channel\n",
+    "        for trial in range(self.__lda.num_trials):\n",
+    "            trial_predictions = []\n",
+    "            for dval in self.__lda.dvals[:,trial]:\n",
+    "                if dval >= 0:\n",
+    "                    channel_prediction = 1\n",
+    "                else:\n",
+    "                    channel_prediction = 0\n",
+    "                trial_predictions.append(channel_prediction)\n",
+    "            \n",
+    "            predictions.append(trial_predictions)\n",
+    "\n",
+    "        predictions = np.asarray(predictions)\n",
+    "\n",
+    "        return predictions\n",
+    "    \n",
+    "    def _grid_search_on_channel_combinations(self, y):\n",
+    "        predictions = self._get_predictions()\n",
+    "            # Find all possible channel combinations to use for collective prediction\n",
+    "        all_channel_idxs_combinations = []\n",
+    "        for i in range(predictions.shape[1]):\n",
+    "            # Find all possible channel combinations of length i+1\n",
+    "            channel_combinations = _find_combinations(predictions.shape[1], i+1)\n",
+    "            all_channel_idxs_combinations.append(channel_combinations)\n",
+    "\n",
+    "        # Grid search on optimal channel combination to use for collective prediction\n",
+    "        accuracies = []\n",
+    "\n",
+    "        for k_length_combinations in all_channel_idxs_combinations:\n",
+    "            k_length_combination_accuracies = []\n",
+    "            for combination in k_length_combinations:\n",
+    "                # Stores all the predictions for this particular combination of k channels\n",
+    "                combination = list(combination)\n",
+    "                combination_predictions = predictions[:,combination]\n",
+    "\n",
+    "                # Stores the collective prediction for this particular combination of k channels\n",
+    "                collective_combination_predictions = _get_collective_predictions(combination_predictions)\n",
+    "\n",
+    "                # Get the accuracy of the collective prediction for each combination of k channels\n",
+    "                k_length_combination_accuracies.append(_get_collective_prediction_accuracy(collective_combination_predictions, y))\n",
+    "            \n",
+    "            accuracies.append(k_length_combination_accuracies)\n",
+    "\n",
+    "        return all_channel_idxs_combinations, accuracies\n",
+    "\n",
+    "    def get_optimal_channel_combination(self, y):\n",
+    "        all_channel_idxs_combinations, accuracies = self._grid_search_on_channel_combinations(y)\n",
+    "\n",
+    "        optimal_time_windows_per_ch = self.__lda.optimal_time_windows_per_channel\n",
+    "        max_accuracies = []\n",
+    "\n",
+    "        for i, accuracies in enumerate(accuracies):\n",
+    "            optimal_chs = []\n",
+    "            ch_idxs = all_channel_idxs_combinations[i][np.argmax(accuracies)]\n",
+    "            for idx in ch_idxs:\n",
+    "                optimal_chs.append(optimal_time_windows_per_ch[idx][0])\n",
+    "\n",
+    "            max_accuracies.append([optimal_chs, np.max(accuracies)])\n",
+    "\n",
+    "        max_accuracies.sort(key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "        return max_accuracies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "70bd9c66",
    "metadata": {},
    "outputs": [],
@@ -930,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 37,
    "id": "9adaa49a",
    "metadata": {},
    "outputs": [
@@ -938,210 +1057,164 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Channel 74 done\n",
-      "Channel 26 done\n",
-      "Channel 57 done\n",
-      "Channel 60 done\n",
-      "Channel 72 done\n",
-      "Channel 43 done\n",
-      "Channel 10 done\n",
-      "Channel 106 done\n",
-      "Channel 62 done\n",
-      "Channel 44 done\n",
-      "Channel 1 done\n",
-      "Channel 88 done\n",
       "Channel 14 done\n",
-      "Channel 0 done\n",
-      "Channel 29 done\n",
-      "Channel 65 done\n",
-      "Channel 86 done\n",
-      "Channel 102 done\n",
-      "Channel 66 done\n",
-      "Channel 51 done\n",
-      "Channel 17 done\n",
-      "Channel 25 done\n",
-      "Channel 9 done\n",
-      "Channel 39 done\n",
-      "Channel 91 done\n",
-      "Channel 107 done\n",
-      "Channel 56 done\n",
-      "Channel 55 done\n",
-      "Channel 18 done\n",
-      "Channel 45 done\n",
-      "Channel 128 done\n",
       "Channel 52 done\n",
-      "Channel 23 done\n",
-      "Channel 84 done\n",
-      "Channel 114 done\n",
-      "Channel 16 done\n",
-      "Channel 19 done\n",
-      "Channel 122 done\n",
-      "Channel 110 done\n",
-      "Channel 6 done\n",
       "Channel 96 done\n",
-      "Channel 132 done\n",
-      "Channel 108 done\n",
-      "Channel 117 done\n",
-      "Channel 95 done\n",
-      "Channel 92 done\n",
-      "Channel 71 done\n",
-      "Channel 109 done\n",
-      "Channel 3 done\n",
-      "Channel 94 done\n",
-      "Channel 35 done\n",
-      "Channel 89 done\n",
-      "Channel 47 done\n",
-      "Channel 73 done\n",
-      "Channel 34 done\n",
-      "Channel 31 done\n",
-      "Channel 20 done\n",
-      "Channel 49 done\n",
-      "Channel 98 done\n",
-      "Channel 77 done\n",
-      "Channel 40 done\n",
-      "Channel 69 done\n",
-      "Channel 76 done\n",
       "Channel 80 done\n",
-      "Channel 116 done\n",
-      "Channel 118 done\n",
-      "Channel 13 done\n",
-      "Channel 115 done\n",
-      "Channel 37 done\n",
-      "Channel 36 done\n",
-      "Channel 28 done\n",
-      "Channel 90 done\n",
-      "Channel 81 done\n",
-      "Channel 50 done\n",
-      "Channel 46 done\n",
-      "Channel 68 done\n",
-      "Channel 121 done\n",
-      "Channel 22 done\n",
-      "Channel 61 done\n",
-      "Channel 67 done\n",
-      "Channel 24 done\n",
-      "Channel 11 done\n",
-      "Channel 53 done\n",
-      "Channel 131 done\n",
-      "Channel 100 done\n",
-      "Channel 4 done\n",
-      "Channel 30 done\n",
-      "Channel 126 done\n",
-      "Channel 7 done\n",
-      "Channel 87 done\n",
-      "Channel 38 done\n",
-      "Channel 101 done\n",
-      "Channel 99 done\n",
-      "Channel 127 done\n",
-      "Channel 104 done\n",
-      "Channel 2 done\n",
-      "Channel 33 done\n",
-      "Channel 12 done\n",
-      "Channel 27 done\n",
-      "Channel 8 done\n",
-      "Channel 42 done\n",
-      "Channel 119 done\n",
-      "Channel 120 done\n",
-      "Channel 123 done\n",
-      "Channel 21 done\n",
-      "Channel 103 done\n",
-      "Channel 82 done\n",
-      "Channel 41 done\n",
-      "Channel 15 done\n",
-      "Channel 85 done\n",
+      "Channel 74 done\n",
+      "Channel 71 done\n",
+      "Channel 49 done\n",
+      "Channel 43 done\n",
       "Channel 111 done\n",
-      "Channel 70 done\n",
-      "Channel 79 done\n",
-      "Channel 48 done\n",
-      "Channel 63 done\n",
-      "Channel 78 done\n",
+      "Channel 35 done\n",
+      "Channel 92 done\n",
+      "Channel 11 done\n",
+      "Channel 51 done\n",
+      "Channel 55 done\n",
+      "Channel 72 done\n",
+      "Channel 10 done\n",
+      "Channel 44 done\n",
+      "Channel 17 done\n",
+      "Channel 89 done\n",
       "Channel 64 done\n",
-      "Channel 58 done\n",
-      "Channel 130 done\n",
-      "Channel 93 done\n",
-      "Channel 97 done\n",
-      "Channel 112 done\n",
-      "Channel 54 done\n",
-      "Channel 113 done\n",
-      "Channel 129 done\n",
-      "Channel 75 done\n",
-      "Channel 83 done\n",
-      "Channel 59 done\n",
-      "Channel 125 done\n",
+      "Channel 109 done\n",
       "Channel 5 done\n",
-      "Channel 105 done\n",
+      "Channel 28 done\n",
+      "Channel 18 done\n",
+      "Channel 75 done\n",
+      "Channel 93 done\n",
+      "Channel 116 done\n",
+      "Channel 9 done\n",
+      "Channel 67 done\n",
+      "Channel 27 done\n",
+      "Channel 101 done\n",
+      "Channel 26 done\n",
+      "Channel 36 done\n",
+      "Channel 94 done\n",
+      "Channel 33 done\n",
+      "Channel 34 done\n",
+      "Channel 77 done\n",
+      "Channel 37 done\n",
+      "Channel 83 done\n",
+      "Channel 115 done\n",
+      "Channel 131 done\n",
+      "Channel 50 done\n",
+      "Channel 59 done\n",
+      "Channel 122 done\n",
+      "Channel 29 done\n",
+      "Channel 106 done\n",
+      "Channel 121 done\n",
+      "Channel 65 done\n",
+      "Channel 7 done\n",
+      "Channel 97 done\n",
+      "Channel 82 done\n",
+      "Channel 58 done\n",
+      "Channel 62 done\n",
+      "Channel 113 done\n",
+      "Channel 127 done\n",
+      "Channel 20 done\n",
+      "Channel 112 done\n",
+      "Channel 130 done\n",
+      "Channel 45 done\n",
+      "Channel 123 done\n",
+      "Channel 132 done\n",
+      "Channel 41 done\n",
+      "Channel 107 done\n",
+      "Channel 22 done\n",
+      "Channel 16 done\n",
+      "Channel 119 done\n",
+      "Channel 108 done\n",
+      "Channel 129 done\n",
+      "Channel 8 done\n",
+      "Channel 24 done\n",
+      "Channel 99 done\n",
+      "Channel 78 done\n",
+      "Channel 47 done\n",
+      "Channel 126 done\n",
+      "Channel 91 done\n",
+      "Channel 1 done\n",
+      "Channel 40 done\n",
+      "Channel 0 done\n",
+      "Channel 19 done\n",
+      "Channel 48 done\n",
+      "Channel 23 done\n",
+      "Channel 90 done\n",
+      "Channel 12 done\n",
+      "Channel 70 done\n",
+      "Channel 31 done\n",
+      "Channel 39 done\n",
+      "Channel 124 done\n",
+      "Channel 95 done\n",
+      "Channel 60 done\n",
+      "Channel 118 done\n",
+      "Channel 128 done\n",
+      "Channel 57 done\n",
+      "Channel 68 done\n",
+      "Channel 54 done\n",
+      "Channel 2 done\n",
+      "Channel 110 done\n",
+      "Channel 69 done\n",
+      "Channel 84 done\n",
+      "Channel 100 done\n",
+      "Channel 79 done\n",
+      "Channel 104 done\n",
+      "Channel 87 done\n",
+      "Channel 66 done\n",
+      "Channel 86 done\n",
+      "Channel 42 done\n",
+      "Channel 53 done\n",
       "Channel 32 done\n",
-      "Channel 124 done\n"
+      "Channel 73 done\n",
+      "Channel 61 done\n",
+      "Channel 56 done\n",
+      "Channel 25 done\n",
+      "Channel 46 done\n",
+      "Channel 38 done\n",
+      "Channel 3 done\n",
+      "Channel 98 done\n",
+      "Channel 125 done\n",
+      "Channel 30 done\n",
+      "Channel 15 done\n",
+      "Channel 6 done\n",
+      "Channel 81 done\n",
+      "Channel 105 done\n",
+      "Channel 21 done\n",
+      "Channel 88 done\n",
+      "Channel 85 done\n",
+      "Channel 102 done\n",
+      "Channel 103 done\n",
+      "Channel 13 done\n",
+      "Channel 114 done\n",
+      "Channel 120 done\n",
+      "Channel 76 done\n",
+      "Channel 63 done\n",
+      "Channel 4 done\n",
+      "Channel 117 done\n"
      ]
     }
    ],
    "source": [
-    "lda.train_on_optimal_time_windows(f_band_data, y, n_processes=20, n_channels=10)"
+    "lda.train_on_optimal_time_windows(f_band_data, y, n_processes=20, n_channels=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "21c07433",
+   "execution_count": 31,
+   "id": "18609133",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pool_predictions(lda:LDA):\n",
-    "    predictions = []\n",
-    "    for trial in range(lda.num_trials):\n",
-    "        predictions_for_trial = []\n",
-    "        for dval in lda.dvals[:,trial]:\n",
-    "            if dval >= 0:\n",
-    "                prediction_by_channel = 1\n",
-    "            else:\n",
-    "                prediction_by_channel = 0\n",
-    "            predictions_for_trial.append(prediction_by_channel)\n",
-    "        \n",
-    "        predictions.append(predictions_for_trial)\n",
-    "\n",
-    "    predictions = np.asarray(predictions)\n",
-    "\n",
-    "    collective_predictions = []\n",
-    "\n",
-    "    for pred in predictions:\n",
-    "        if pred.mean() >= 0.5:\n",
-    "            collective_predictions.append(1)\n",
-    "        else:\n",
-    "            collective_predictions.append(0)\n",
-    "\n",
-    "    collective_predictions = np.asarray(collective_predictions)\n",
-    "\n",
-    "    return predictions, collective_predictions"
+    "grid_search = GridSearch(lda)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "c40cf176",
+   "execution_count": 43,
+   "id": "5dc09f15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, collective_predictions = pool_predictions(lda)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "id": "58f049f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7405405405405405"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(collective_predictions == y).mean()"
+    "max_accuracies = grid_search.get_optimal_channel_combination(y)"
    ]
   },
   {
