refactor code to include classes for training LDA models

--- a/EFRI_Data_Analysis.ipynb
+++ b/EFRI_Data_Analysis.ipynb
@@ -37,8 +37,7 @@
     "import mat73\n",
     "import numpy as np\n",
     "\n",
-    "from LDA import LDA\n",
-    "from PlotLDAMetrics import PerChannelTimestep, PerTimestepAllChannels"
+    "from lda_ import LDA"
    ]
   },
   {
@@ -207,6 +206,114 @@
    "metadata": {},
    "source": [
     "# Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda = LDA(data, setup_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "133"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.num_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 1 into shape (133,20,newaxis)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlda_\u001b[39;00m \u001b[39mimport\u001b[39;00m PerChannelTimestep\n\u001b[0;32m----> 2\u001b[0m trained_lda \u001b[39m=\u001b[39m PerChannelTimestep(setup_data, f_band_data,y, \u001b[39m5\u001b[39m, \u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/Documents/lda-war-game/lda_.py:285\u001b[0m, in \u001b[0;36mPerChannelTimestep.__init__\u001b[0;34m(self, setup_data, data, y, time_resolution, filter_channels)\u001b[0m\n\u001b[1;32m    276\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\n\u001b[1;32m    277\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    278\u001b[0m     setup_data,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    282\u001b[0m     filter_channels \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    283\u001b[0m     ) :\n\u001b[1;32m    284\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(data, setup_data)\n\u001b[0;32m--> 285\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrain_per_channel_and_timestep(data, y, time_resolution)\n\u001b[1;32m    286\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sort_scores(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfilter_channels)\n",
+      "File \u001b[0;32m~/Documents/lda-war-game/lda_.py:319\u001b[0m, in \u001b[0;36mPerChannelTimestep.train_per_channel_and_timestep\u001b[0;34m(self, data, y, time_resolution)\u001b[0m\n\u001b[1;32m    316\u001b[0m         X \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mcreate_X(data, channel, time\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime_resolution)\n\u001b[1;32m    317\u001b[0m         \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mtrain(X, y)\n\u001b[0;32m--> 319\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m_reshape_attributes((\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_channels,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrescaled_timesteps,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n",
+      "File \u001b[0;32m~/Documents/lda-war-game/lda_.py:21\u001b[0m, in \u001b[0;36mLDA._reshape_attributes\u001b[0;34m(self, new_shape)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m attr_name \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m     20\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m attr_name\u001b[39m.\u001b[39mstartswith(\u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m---> 21\u001b[0m         \u001b[39msetattr\u001b[39m(\u001b[39mself\u001b[39m, attr_name, np\u001b[39m.\u001b[39mreshape(\u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, attr_name), new_shape))\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mreshape\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/site-packages/numpy/core/fromnumeric.py:298\u001b[0m, in \u001b[0;36mreshape\u001b[0;34m(a, newshape, order)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_reshape_dispatcher)\n\u001b[1;32m    199\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreshape\u001b[39m(a, newshape, order\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m    200\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    201\u001b[0m \u001b[39m    Gives a new shape to an array without changing its data.\u001b[39;00m\n\u001b[1;32m    202\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    296\u001b[0m \u001b[39m           [5, 6]])\u001b[39;00m\n\u001b[1;32m    297\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 298\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39m\u001b[39mreshape\u001b[39m\u001b[39m'\u001b[39m, newshape, order\u001b[39m=\u001b[39morder)\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/site-packages/numpy/core/fromnumeric.py:54\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     52\u001b[0m bound \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, method, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     53\u001b[0m \u001b[39mif\u001b[39;00m bound \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[1;32m     56\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     57\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/site-packages/numpy/core/fromnumeric.py:43\u001b[0m, in \u001b[0;36m_wrapit\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[1;32m     42\u001b[0m     wrap \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(asarray(obj), method)(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[1;32m     44\u001b[0m \u001b[39mif\u001b[39;00m wrap:\n\u001b[1;32m     45\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, mu\u001b[39m.\u001b[39mndarray):\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1 into shape (133,20,newaxis)"
+     ]
+    }
+   ],
+   "source": [
+    "from lda_ import TrainOptimalTimeWindows\n",
+    "trained_lda = TrainOptimalTimeWindows(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_lda.time_resolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_lda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "PerChannelTimestep.train_per_channel_and_timestep() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trained_lda\u001b[39m.\u001b[39mtrain_per_channel_and_timestep(data \u001b[39m=\u001b[39m f_band_data,  y \u001b[39m=\u001b[39m y, time_resolution\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: PerChannelTimestep.train_per_channel_and_timestep() missing 1 required positional argument: 'self'"
+     ]
+    }
+   ],
+   "source": [
+    "trained_lda.train_per_channel_and_timestep(data = f_band_data,  y = y, time_resolution=5)"
    ]
   },
   {
