add logistic regression into analysis

--- a/EFRI_Data_Analysis.ipynb
+++ b/EFRI_Data_Analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +241,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find which brain regions that contribute to decision-making are shared among subjects (movement onset)"
+    "### Find which brain regions that contribute to decision-making are shared among subjects (movement onset, -3s to 0s) [logistic regression]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,35 +256,32 @@
     "subs = ['06','07','10','12','13','15','16','17','18','21']\n",
     "\n",
     "for sub in subs:\n",
-    "    channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_optimal_time_window_channel_combination.npy'))\n",
-    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_optimal_time_window_optimal_channel_combination.npy'))"
+    "    channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_logistic_movement_optimal_time_window_channel_combination.npy'))\n",
+    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_logistic_movement_optimal_time_window_optimal_channel_combination_10.npy'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['angular gyrus R', 3],\n",
-       " ['fusiform gyrus L', 3],\n",
-       " ['middle temporal gyrus L', 3],\n",
-       " ['occipital gyrus L', 3],\n",
-       " ['cingulate cortex (posterior) R', 2],\n",
-       " ['inferior temporal gyrus L', 2],\n",
+       "[['middle temporal gyrus L', 4],\n",
+       " ['angular gyrus R', 3],\n",
+       " ['cuneus R', 2],\n",
+       " ['fusiform gyrus L', 2],\n",
+       " ['hippocampus (anterior) L', 2],\n",
        " ['insular cortex (anterior) R', 2],\n",
        " ['middle temporal gyrus R', 2],\n",
-       " ['parietal operculum R', 2],\n",
-       " ['parietooccipital sulcus L', 2],\n",
-       " ['superior temporal gyrus (planum temporale) L', 2],\n",
-       " ['superior temporal gyrus (planum temporale) R', 2],\n",
-       " ['superior temporal sulcus R', 2],\n",
-       " ['supramarginal gyrus L', 2]]"
+       " ['occipital gyrus R', 2],\n",
+       " ['parietal operculum L', 2],\n",
+       " ['supramarginal gyrus L', 2],\n",
+       " ['supramarginal gyrus R', 2]]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,48 +292,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['middle temporal gyrus L', 5],\n",
-       " ['angular gyrus R', 4],\n",
-       " ['fusiform gyrus L', 4],\n",
-       " ['cingulate cortex (posterior) R', 3],\n",
-       " ['inferior frontal gyrus (pars orbitalis) R', 3],\n",
-       " ['inferior temporal sulcus R', 3],\n",
-       " ['middle temporal gyrus R', 3],\n",
-       " ['superior temporal gyrus (planum temporale) R', 3],\n",
+       "[['hippocampus (anterior) L', 3],\n",
+       " ['middle temporal gyrus L', 3],\n",
+       " ['cingulate cortex (posterior) R', 2],\n",
        " ['cuneus R', 2],\n",
-       " ['fusiform gyrus R', 2],\n",
-       " ['hippocampus (anterior) L', 2],\n",
-       " ['hippocampus (anterior) R', 2],\n",
-       " ['hippocampus (posterior) R', 2],\n",
-       " ['inferior frontal gyrus (pars opercularis) R', 2],\n",
-       " ['inferior temporal gyrus L', 2],\n",
-       " ['inferior temporal gyrus R', 2],\n",
+       " ['fusiform gyrus L', 2],\n",
+       " ['inferior frontal gyrus (pars triangularis) R', 2],\n",
        " ['insular cortex (anterior) R', 2],\n",
-       " ['insular cortex (posterior) R', 2],\n",
        " ['intraparietal sulcus R', 2],\n",
+       " ['middle temporal gyrus R', 2],\n",
        " ['occipital gyrus L', 2],\n",
        " ['occipital gyrus R', 2],\n",
-       " ['parietal operculum R', 2],\n",
        " ['parietooccipital sulcus L', 2],\n",
-       " ['superior temporal gyrus (planum temporale) L', 2],\n",
-       " ['superior temporal sulcus R', 2],\n",
        " ['supramarginal gyrus L', 2],\n",
        " ['supramarginal gyrus R', 2]]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_shared_brain_areas(channel_combinations_for_movement)"
+    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random State: 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_combinations_for_movement = []\n",
+    "optimal_channel_combinations_for_movement = []\n",
+    "\n",
+    "subs = ['06','07','10','12','13','15','16','17','18','21']\n",
+    "\n",
+    "for sub in subs:\n",
+    "    channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_logistic_42_movement_optimal_time_window_channel_combination.npy'))\n",
+    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_logistic_42_movement_optimal_time_window_optimal_channel_combination.npy'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['hippocampus (anterior) L', 3],\n",
+       " ['middle temporal gyrus L', 3],\n",
+       " ['cingulate cortex (posterior) R', 2],\n",
+       " ['cuneus R', 2],\n",
+       " ['fusiform gyrus L', 2],\n",
+       " ['inferior frontal gyrus (pars triangularis) R', 2],\n",
+       " ['insular cortex (anterior) R', 2],\n",
+       " ['intraparietal sulcus R', 2],\n",
+       " ['middle temporal gyrus R', 2],\n",
+       " ['occipital gyrus L', 2],\n",
+       " ['occipital gyrus R', 2],\n",
+       " ['supramarginal gyrus L', 2],\n",
+       " ['supramarginal gyrus R', 2]]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find which brain regions that contribute to decision-making are shared among subjects (movement onset, -3s to 0s) [LDA]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_combinations_for_movement = []\n",
+    "optimal_channel_combinations_for_movement = []\n",
+    "\n",
+    "subs = ['06','07','10','12','13','15','16','17','18','21']\n",
+    "\n",
+    "for sub in subs:\n",
+    "    channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_lda_movement_optimal_time_window_channel_combination.npy'))\n",
+    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_lda_movement_optimal_time_window_optimal_channel_combination.npy'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['cingulate cortex (posterior) R', 3],\n",
+       " ['middle temporal gyrus L', 3],\n",
+       " ['middle temporal gyrus R', 3],\n",
+       " ['supramarginal gyrus L', 3],\n",
+       " ['cuneus R', 2],\n",
+       " ['fusiform gyrus L', 2],\n",
+       " ['insular cortex (anterior) R', 2],\n",
+       " ['occipital gyrus L', 2],\n",
+       " ['parietal operculum L', 2],\n",
+       " ['superior temporal sulcus R', 2],\n",
+       " ['supramarginal gyrus R', 2]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_combinations_for_movement = []\n",
+    "optimal_channel_combinations_for_movement = []\n",
+    "\n",
+    "subs = ['06','07','10','12','13','15','16','17','18','21']\n",
+    "\n",
+    "for sub in subs:\n",
+    "    channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_lda_movement_optimal_time_window_channel_combination.npy'))\n",
+    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_lda_movement_optimal_time_window_optimal_channel_combination_10.npy'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['fusiform gyrus L', 3],\n",
+       " ['cingulate cortex (posterior) R', 2],\n",
+       " ['hippocampus (anterior) L', 2],\n",
+       " ['insular cortex (anterior) R', 2],\n",
+       " ['middle temporal gyrus L', 2],\n",
+       " ['middle temporal gyrus R', 2],\n",
+       " ['occipital gyrus L', 2],\n",
+       " ['superior temporal sulcus R', 2],\n",
+       " ['supramarginal gyrus L', 2],\n",
+       " ['supramarginal gyrus R', 2]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
    ]
   },
   {
@@ -440,6 +577,76 @@
    ],
    "source": [
     "find_shared_brain_areas(channel_combinations_for_vis_stim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extraneous Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [['hippocampus (anterior) L', 3],\n",
+    " ['middle temporal gyrus L', 3],\n",
+    " ['cingulate cortex (posterior) R', 2],\n",
+    " ['cuneus R', 2],\n",
+    " ['fusiform gyrus L', 2],\n",
+    " ['inferior frontal gyrus (pars triangularis) R', 2],\n",
+    " ['insular cortex (anterior) R', 2],\n",
+    " ['intraparietal sulcus R', 2],\n",
+    " ['middle temporal gyrus R', 2],\n",
+    " ['occipital gyrus L', 2],\n",
+    " ['occipital gyrus R', 2],\n",
+    " ['supramarginal gyrus L', 2],\n",
+    " ['supramarginal gyrus R', 2], \n",
+    " ['cingulate cortex (posterior) R', 3],\n",
+    " ['middle temporal gyrus L', 3],\n",
+    " ['middle temporal gyrus R', 3],\n",
+    " ['supramarginal gyrus L', 3],\n",
+    " ['cuneus R', 2],\n",
+    " ['fusiform gyrus L', 2],\n",
+    " ['insular cortex (anterior) R', 2],\n",
+    " ['occipital gyrus L', 2],\n",
+    " ['parietal operculum L', 2],\n",
+    " ['superior temporal sulcus R', 2],\n",
+    " ['supramarginal gyrus R', 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_ = []\n",
+    "for i in arr:\n",
+    "    arr_.append(i[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "len(np.unique(arr_))"
    ]
   }
  ],
